--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
-```json
 {
   "name": "simple-logging-library",
   "version": "1.0.0",
   "description": "A lightweight and easy-to-use logging library aimed at maximizing code simplicity and clarity in error tracking.",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "echo 'Running tests...'",
+    "build": "echo 'Building the library...'
+  },
   "author": "Your Name <your.email@example.com>",
   "license": "MIT",
   "dependencies": {}
 }
-```
