--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo 'Running tests...'",
-    "build": "echo 'Building the library...'
+    "build": "echo 'Building the library...'"
   },
   "author": "Your Name <your.email@example.com>",
   "license": "MIT",
